[gd_scene load_steps=6 format=2]

[ext_resource path="res://BalanceGame/Block.gd" type="Script" id=1]
[ext_resource path="res://addons/multiplayer/Sync.gd" type="Script" id=2]
[ext_resource path="res://assets/White.png" type="Texture" id=3]
[ext_resource path="res://assets/sounds/grow.wav" type="AudioStream" id=4]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 5, 10 )

[node name="Block" type="Area2D" groups=["block"]]
visible = false
script = ExtResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 2.38419e-07, 4.76837e-07 )
scale = Vector2( 2.5, 5 )
texture = ExtResource( 3 )

[node name="Tween" type="Tween" parent="."]
repeat = true
playback/repeat = true

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sync" type="Node" parent="."]
script = ExtResource( 2 )
initial = PoolStringArray( "tint_color", "spawn_pos", "max_size" )

[node name="Audio" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 4 )
pitch_scale = 0.2

[connection signal="body_entered" from="." to="." method="_on_Block_entered"]
[connection signal="body_exited" from="." to="." method="_on_Block_exited"]
[connection signal="tween_completed" from="Tween" to="." method="_on_tween_completed"]
